--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <h2>WEB</h2>
 
   <p>
-    05시 기상<br>
-    부석사 06시 출발 9시 도착 산행 2시간<br>
+    2일 토요일 06시 30분 기상<br>
+    부석사 07시 30분 출발 10시 도착 산행 2시간<br>
     챙길꺼 간식 바나나 커피 빵 (휴게소 1회 증정)<br>
     하산해서 사과3상자사기<br>
     점심 : 나드리분식<br>
@@ -24,6 +24,27 @@
     15시 소갈비먹기<br>
     16시 숙소이동<br>
   </P>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://402ho.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
   <img src="coding.jpg" width="20%">
 </body>
 </html>
